--- a/boxhead/boxhead/boxhead.vcxproj
+++ b/boxhead/boxhead/boxhead.vcxproj
@@ -270,6 +270,16 @@
     <Text Include="cube.txt" />
     <Text Include="Stage.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\textures\TDF1.bmp" />
+    <Image Include="..\textures\TDF2.bmp" />
+    <Image Include="..\textures\TDF3.bmp" />
+    <Image Include="..\textures\TDF4.bmp" />
+    <Image Include="..\textures\TDF5.bmp" />
+    <Image Include="..\textures\TDF7.bmp" />
+    <Image Include="..\textures\TDX0.bmp" />
+    <Image Include="..\textures\TDX3.bmp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\freeglut.redist.2.8.1.15\build\native\freeglut.redist.targets" Condition="Exists('..\packages\freeglut.redist.2.8.1.15\build\native\freeglut.redist.targets')" />
