--- a/boxhead/boxhead/boxhead.vcxproj.filters
+++ b/boxhead/boxhead/boxhead.vcxproj.filters
@@ -339,28 +339,28 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\textures\TDF1.bmp">
+    <Image Include="textures\TDF1.bmp">
       <Filter>리소스 파일\Textures</Filter>
     </Image>
-    <Image Include="..\textures\TDF2.bmp">
+    <Image Include="textures\TDF2.bmp">
       <Filter>리소스 파일\Textures</Filter>
     </Image>
-    <Image Include="..\textures\TDF3.bmp">
+    <Image Include="textures\TDF3.bmp">
       <Filter>리소스 파일\Textures</Filter>
     </Image>
-    <Image Include="..\textures\TDF4.bmp">
+    <Image Include="textures\TDF4.bmp">
       <Filter>리소스 파일\Textures</Filter>
     </Image>
-    <Image Include="..\textures\TDF5.bmp">
+    <Image Include="textures\TDF5.bmp">
       <Filter>리소스 파일\Textures</Filter>
     </Image>
-    <Image Include="..\textures\TDF7.bmp">
+    <Image Include="textures\TDF7.bmp">
       <Filter>리소스 파일\Textures</Filter>
     </Image>
-    <Image Include="..\textures\TDX0.bmp">
+    <Image Include="textures\TDX0.bmp">
       <Filter>리소스 파일\Textures</Filter>
     </Image>
-    <Image Include="..\textures\TDX3.bmp">
+    <Image Include="textures\TDX3.bmp">
       <Filter>리소스 파일\Textures</Filter>
     </Image>
   </ItemGroup>
