중력 적용, 이동 도우미 클래스 추가

--- a/boxhead/boxhead/boxhead.vcxproj.filters
+++ b/boxhead/boxhead/boxhead.vcxproj.filters
@@ -180,6 +180,12 @@
     <ClCompile Include="ImageLoader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MoveHelper.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="GravityHelper.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -327,6 +333,12 @@
       <Filter>헤더 파일\Contents\Models</Filter>
     </ClInclude>
     <ClInclude Include="ImageLoader.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveHelper.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GravityHelper.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
