--- a/boxhead/boxhead/boxhead.vcxproj
+++ b/boxhead/boxhead/boxhead.vcxproj
@@ -200,11 +200,13 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="GameViewManger.cpp" />
+    <ClCompile Include="GravityHelper.cpp" />
     <ClCompile Include="ImageLoader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainScene.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModelView.cpp" />
+    <ClCompile Include="MoveHelper.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -257,11 +259,13 @@
     <ClInclude Include="GameObject.hpp" />
     <ClInclude Include="GameScene.hpp" />
     <ClInclude Include="GameViewManger.hpp" />
+    <ClInclude Include="GravityHelper.hpp" />
     <ClInclude Include="ImageLoader.hpp" />
     <ClInclude Include="Main.hpp" />
     <ClInclude Include="MainScene.hpp" />
     <ClInclude Include="Model.hpp" />
     <ClInclude Include="ModelView.hpp" />
+    <ClInclude Include="MoveHelper.hpp" />
     <ClInclude Include="pch.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="resource.h" />
