메뉴 스프라이트 추가

--- a/boxhead/boxhead/boxhead.vcxproj
+++ b/boxhead/boxhead/boxhead.vcxproj
@@ -292,6 +292,9 @@
     <Image Include="textures\dark_oak_log.png" />
     <Image Include="textures\dark_oak_log_top.png" />
     <Image Include="textures\dark_oak_planks.png" />
+    <Image Include="textures\menu_exit.png" />
+    <Image Include="textures\menu_help.png" />
+    <Image Include="textures\menu_start.png" />
     <Image Include="textures\shadow.png" />
     <Image Include="textures\TDF1.bmp" />
     <Image Include="textures\TDF2.bmp" />
