--- a/boxhead/boxhead/boxhead.vcxproj.filters
+++ b/boxhead/boxhead/boxhead.vcxproj.filters
@@ -207,6 +207,12 @@
     <None Include="..\Shaders\TextureV.glsl">
       <Filter>리소스 파일\Shaders</Filter>
     </None>
+    <None Include="..\Shaders\CircleP.glsl">
+      <Filter>리소스 파일\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\CircleV.glsl">
+      <Filter>리소스 파일\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.hpp">
